--- a/index.html
+++ b/index.html
@@ -20,9 +20,21 @@
                         <input placeholder="Search For an Entry" id="page1-input">
                     </div>
                 </div>
+                <div id="page1-middle">
+                    <div id="page1-middle-wrap">
+                        View List
+                    </div>
+                </div>
                 <div id="page1-bottom">
                     <div id="page1-bottom-wrap">
-                        2
+                        <div class="wheel" id="wheel">
+                            <div class="item">1</div>
+                            <div class="item">2</div>
+                            <div class="item">3</div>
+                            <div class="item">4</div>
+                            <div class="item">5</div>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -30,5 +42,6 @@
     </div>
 </body>
 <script src="index.js"></script>
+<script src="pages\page1\page1.js"></script>
 
 </html>
