--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
                 </div>
                 <div id="page1-bottom">
                     <div id="page1-bottom-wrap">
-                        <div class="wheel" id="wheel">
-                            <div class="item">1</div>
-                            <div class="item">2</div>
-                            <div class="item">3</div>
-                            <div class="item">4</div>
-                            <div class="item">5</div>
+                        <div id="carousel-wrapper">
+                            <div id="carousel">
+                                <div class="card">1</div>
+                                <div class="card">2</div>
+                                <div class="card">3</div>
+                                <div class="card">4</div>
+                                <div class="card">5</div>
+                            </div>
                         </div>
-
                     </div>
                 </div>
             </div>
