--- a/index.html
+++ b/index.html
@@ -27,14 +27,7 @@
                 </div>
                 <div id="page1-bottom">
                     <div id="page1-bottom-wrap">
-                        <div id="carousel-wrapper">
-                            <div id="carousel">
-                                <div class="card">1</div>
-                                <div class="card">2</div>
-                                <div class="card">3</div>
-                                <div class="card">4</div>
-                                <div class="card">5</div>
-                            </div>
+                        <div class="viewport" id="viewport">
                         </div>
                     </div>
                 </div>
