--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 </div>
             </div>
         </div>
+        <div class="page" id="page2"></div>
     </div>
 </body>
 <script src="index.js"></script>
