--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Manga List</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="pages\page1\page1.css">
+    <link rel="stylesheet" href="pages\page2\page2.css">
 </head>
 
 <body>
@@ -38,5 +39,6 @@
 </body>
 <script src="index.js"></script>
 <script src="pages\page1\page1.js"></script>
+<script src="pages\page2\page2.js"></script>
 
 </html>
