--- a/pages/page2/page2.html
+++ b/pages/page2/page2.html
@@ -1,10 +1,6 @@
 <div id="page2-wrapper"></div>
-<button id="createFile">Create JS File</button>
+<button id="saveJS">Save entryMap to GitHub</button>
 
 <script>
-    document.getElementById("createFile").addEventListener("click", () => {
-        const filename = "test.js";
-        const content = "console.log('Hello from generated file!');";
-        createJsFile(filename, content);
-    });
+    document.getElementById("saveJS").addEventListener("click", saveEntryMap);
 </script>
