--- a/pages/page2/page2.html
+++ b/pages/page2/page2.html
@@ -1,2 +1,4 @@
 <div id="page2-wrapper"></div>
-<button id="saveJS">Save entryMap.js to GitHub</button>
+<button id="makeFile">Create JS File</button>
+
+<script src="script.js"></script>
