--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
 <script src="index.js"></script>
 <script src="pages\page1\page1.js"></script>
 <script src="pages\page2\page2.js"></script>
+<script src="test.js"></script>
 
 </html>
