--- a/pages/page2/page2.html
+++ b/pages/page2/page2.html
@@ -1,7 +1,7 @@
 <div id="page2-wrapper">
     <div id="page2-topbar">
         <div id="update_list-btn"class="topbar-entry" style="flex: .25;">Update list</div>
-        <div class="topbar-entry" style="flex: .5;">_eXeCutie</div>
-        <div class="topbar-entry" style="flex: .25;">Om at bruge siden<!--dropdown text on hover--></div>
+        <div class="topbar-entry" style="flex: .5;">Filter</div>
+        <div class="topbar-entry" style="flex: .25;">On using the site<!--dropdown text on hover--></div>
     </div>
 </div>
